[project]
name = "web-service"
version = "0.1.0"
description = "General purpose web-service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[tool.uv.workspace]
members = [
    "clear",
    "clean",
]
